AS-2002-06-05-2: Change:    print edit comment when cluster config is
                            created in inst_sge script
                 Issue:     #213

JG-2002-06-05-0: Bugfix:    Load values on HP-UX 11 multiprocessor machines 
                            were incorrect.
                 Issue:     #246

AS-2002-06-04-2  CVS        Created V531_beta1_TAG
--------------------------------------------------

SD-2002-06-04-0: Bugfix:    Removed max_jobs reference from 5.3 branch
		 Issue:	    #273

SD-2002-06-03-0: Bugfix:    Fixed GRD 5.1.9 to SGEEE 5.3 upgrade
		 Issue:	    #273

JG-2002-05-31-0: Enhancem.  rshd: new switch -i: ignore /etc/nologin
                 Issue:     #272

AH-2002-05-29-0: Bugfix:    Fix bug allowing non-privileged users to submit jobs 
                            with priority higher than 0
                 Issue:     #271
                 Bugtraq:   #4692957

JG-2002-05-29-0: Enhancem.  Allow specification of arguments to 
                            [rsh|rlogin|qlogin]_[daemon|command]
                 Issue:     #232

AH-2002-05-28-0: Bugfix:    Fix messages printed when GDI client fails contacting 
                            qmaster

JG-2002-05-27-0: Bugfix:    qsh ignored -S <shell> in sge_request(5) files
                 Issue:     #250
                 Bugtraq:   #4682966

AA-2002-05-27-0: I18N.:     I18N/L10N changes

CR-2002-05-23-1: Enhancem.: Testsuite update of install_core_system check:
                            new messages for L10N caused timeouts.

AA-2002-05-23-0: Bugfix:    qmon_messages.ad for l10n 

CR-2002-05-22-3: Bugfix:    infotext message output on linux

CR-2002-05-22-2: Bugfix:    infotext binary

CR-2002-05-22-1: Enhancem.: New script for i18n: Extract messages from
                            install scripts (file:
                            source/scripts/infotext_msg_parse.tcl)

CR-2002-05-22-0: Enhancem.: added "infotext" binary for l10n 
