@@ -66,7 +66,13 @@
 #define MSG_ERROR_COULDNOTOPENSTDOUTASFILE                 _("Could not open stdout as file\n")
 #define MSG_ERROR_UNABLETODUMPJOBLIST                      _("Unable to dump job list\n")
 
+#define MSG_CONFIG_CONF_ERROROPENINGSPOOLFILE_SS    _("error opening the configuration spool file "SFN": %s\n")
 #define MSG_CONFIG_CONF_VERSIONNOTFOUNDONREADINGSPOOLFILE    _("conf_version not found on reading spool file\n")
+#define MSG_CONFIG_CONF_NOVALUEFORCONFIGATTRIB_S       _("no value given for configuration attribute "SFQ"\n")
+#define MSG_CONFIG_CONF_INCORRECTVALUEFORCONFIGATTRIB_SS       _("incorrect value "SFQ" given for configuration attribute "SFQ"\n")
+#define MSG_CONFIG_CONF_GIDRANGELESSTHANNOTALLOWED_I  _("gid range with minimum less than %d not allowed\n")
+#define MSG_CONFIG_CONF_ONLYSINGLEVALUEFORCONFIGATTRIB_S       _("only a single value is allowed for configuration attribute "SFQ"\n")
+#define MSG_CONFIG_CONF_ERRORSTORINGCONFIGVALUE_S       _("error storing configuration attribute "SFQ"\n")
 
 
 
