@@ -190,6 +190,7 @@ u_long32 flags
    DENTER(TOP_LAYER, "read_configuration");
 
    if (!(fp = fopen(fname, "r"))) {
+      WARNING((SGE_EVENT, MSG_CONFIG_CONF_ERROROPENINGSPOOLFILE_SS, fname, strerror(errno)));
       DEXIT;
       return NULL;
    }
@@ -212,7 +213,7 @@ u_long32 flags
          first_line = 0;
          if (!strcmp(name, "conf_version")) {
             if (!(value = strtok(NULL, " \t\n"))) {
-               /* return line if value is empty */
+               WARNING((SGE_EVENT, MSG_CONFIG_CONF_NOVALUEFORCONFIGATTRIB_S, name));
                fclose(fp);
                DEXIT;
                return NULL;
@@ -220,13 +221,14 @@ u_long32 flags
             sscanf(value, u32, &conf_version);
             DPRINTF(("read conf %s version " u32"\n", conf_name, conf_version));
             continue;
-         }
-         else
+         } else {
             WARNING((SGE_EVENT, MSG_CONFIG_CONF_VERSIONNOTFOUNDONREADINGSPOOLFILE));
+         }   
       }
+      
       ep = lAddElemStr(&lp, CF_name, name, CF_Type);
       if (!ep) {
-         /* return line if name is unknown */
+         WARNING((SGE_EVENT, MSG_CONFIG_CONF_ERRORSTORINGCONFIGVALUE_S, name));
          lFreeList(lp);
          fclose(fp);
          DEXIT;
@@ -241,7 +243,8 @@ u_long32 flags
                lSetString(ep, CF_value, value);
             } else if (!(rlp = parse_ranges(value, 0, 0, &alp, NULL,
                 INF_NOT_ALLOWED))) {
-
+               WARNING((SGE_EVENT, MSG_CONFIG_CONF_INCORRECTVALUEFORCONFIGATTRIB_SS, 
+                        name, value));
                lFreeList(alp);
                lFreeList(lp);
                fclose(fp);
@@ -255,7 +258,8 @@ u_long32 flags
                   long min;
 
                   min = lGetUlong(rep, RN_min);
-                  if (min < 1000) {
+                  if (min < 100) {
+                     WARNING((SGE_EVENT, MSG_CONFIG_CONF_GIDRANGELESSTHANNOTALLOWED_I, 100));
                      lFreeList(alp);
                      lFreeList(lp);
                      fclose(fp);
@@ -276,6 +280,7 @@ u_long32 flags
          if (value) {
             lSetString(ep, CF_value, value);
          } else {
+            WARNING((SGE_EVENT, MSG_CONFIG_CONF_NOVALUEFORCONFIGATTRIB_S, name));
             lFreeList(lp);
             fclose(fp);
             DEXIT;
@@ -303,6 +308,7 @@ u_long32 flags
          !strcmp(name, "rsh_daemon")) {
          if (!(value = strtok(NULL, "\t\n"))) {
             /* return line if value is empty */
+            WARNING((SGE_EVENT, MSG_CONFIG_CONF_NOVALUEFORCONFIGATTRIB_S, name));
             lFreeList(lp);
             fclose(fp);
             DEXIT;
@@ -313,10 +319,9 @@ u_long32 flags
             value++;
 
          lSetString(ep, CF_value, value);
-      } 
-      else {
+      } else {
          if (!(value = strtok(NULL, " \t\n"))) {
-            /* return line if value is empty */
+            WARNING((SGE_EVENT, MSG_CONFIG_CONF_NOVALUEFORCONFIGATTRIB_S, name));
             lFreeList(lp);
             fclose(fp);
             DEXIT;
@@ -327,6 +332,7 @@ u_long32 flags
 
          if (strtok(NULL, " \t\n")) {
             /* Allow only one value per line */
+            WARNING((SGE_EVENT, MSG_CONFIG_CONF_ONLYSINGLEVALUEFORCONFIGATTRIB_S, name));
             fclose(fp);
             DEXIT;
             return NULL;
