@@ -1,3 +1,10 @@
+JG-2002-06-05-1: Bugfix:    Error handling when reading configuration at
+                            qmaster startup was incomplete and produced
+                            confusing error messages.
+                 Issue:     #226
+                 Bugtraq:   #4665789
+
+
 AS-2002-06-05-2: Change:    print edit comment when cluster config is
                             created in inst_sge script
                  Issue:     #213
